--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai-as-promised": "^6.0.0",
     "chai-http": "^3.0.0",
     "decimal.js": "^7.2.4",
+    "ebnf": "^1.5.0",
     "jszip": "^3.1.3",
     "mocha": "^3.2.0",
     "nyc": "^10.0.0",
